--- a/app/src/main/res/layout/activity_burns.xml
+++ b/app/src/main/res/layout/activity_burns.xml
@@ -15,99 +15,130 @@
         android:layout_alignParentStart="true">
 
         <LinearLayout
-            android:orientation="vertical"
-            android:background="@color/colorWhite"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <TextView
+            <GridLayout
+                android:columnCount="1"
+                android:columnOrderPreserved="false"
+                android:rowCount="5"
+                android:alignmentMode="alignMargins"
+                android:layout_weight="7"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text=" 1st Degree"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                android:textColor="#000000"/>
+                android:layout_height="0dp"
+                android:padding="12dp">
+
+                <!-- Row 1 -->
+                <android.support.v7.widget.CardView
+                    android:layout_height="0dp"
+                    android:layout_width="0dp"
+                    android:layout_columnWeight="1"
+                    android:layout_rowWeight="1"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    app:cardElevation="6dp"
+                    app:cardCornerRadius="6dp"
+                    >
+
+                    <LinearLayout
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:orientation="vertical"
+                        android:layout_margin="16dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:text="1st Degree\n\n  • Soaking the wound in cool water for five minutes or longer\n • Applying cream to soothe the skin \n • Using an antibiotic ointment and loose gauze to protect the affected area"
+                            android:textAlignment="center"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
 
 
-            <TextView
-                android:layout_gravity="center_horizontal"
-                android:textSize="20dp"
-                android:text=" • Soaking the wound in cool water for five minutes or longer\n • Applying cream to soothe the skin \n • Using an antibiotic ointment and loose gauze to protect the affected area"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#c60000"/>
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+                <!-- Row 2 -->
+                <android.support.v7.widget.CardView
+                    android:layout_height="0dp"
+                    android:layout_width="0dp"
+                    android:layout_columnWeight="1"
+                    android:layout_rowWeight="1"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    app:cardElevation="6dp"
+                    app:cardCornerRadius="6dp"
+                    >
+                    <!-- Row 2 -->
+                    <LinearLayout
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:orientation="vertical"
+                        android:layout_margin="16dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:text="2nd Degree\n\n • Running the skin under cool water for 15 minutes or longer\n • Taking over-the-counter pain medication\n • Applying antibiotic cream to blisters"
+                            android:textAlignment="center"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+                <!-- Row 3 -->
+                <android.support.v7.widget.CardView
+                    android:layout_height="0dp"
+                    android:layout_width="0dp"
+                    android:layout_columnWeight="1"
+                    android:layout_rowWeight="1"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    app:cardElevation="6dp"
+                    app:cardCornerRadius="6dp"
+                    >
+
+                    <LinearLayout
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:orientation="vertical"
+                        android:layout_margin="16dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:text="3rd Degree\n\n • Never Attempt to treat a Third Degree burn\n • Press Emergency Button Immediately"
+                            android:textAlignment="center"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+            </GridLayout>
+
+
+
 
         </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_marginTop="160dp"
-            android:orientation="vertical"
-            android:background="@color/colorWhite"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:background="@drawable/red_border_top"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text=" 2nd Degree"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                android:textColor="#000000"/>
-
-
-            <TextView
-                android:layout_gravity="center_horizontal"
-                android:textSize="20dp"
-                android:text=" • Running the skin under cool water for 15 minutes or longer\n • Taking over-the-counter pain medication\n • Applying antibiotic cream to blisters"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#c60000"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_marginTop="320dp"
-            android:orientation="vertical"
-            android:background="@color/colorWhite"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:background="@drawable/red_border_top"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text=" 3rd Degree"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                android:textColor="#000000"/>
-
-
-            <TextView
-                android:textSize="20dp"
-                android:text=" • Never Attempt to treat a Third Degree burn\n • Press Emergency Button Immediately"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#c60000"/>
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_marginTop="430dp"
-            android:orientation="vertical"
-            android:background="@color/colorWhite"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:background="@drawable/red_border_top"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-        </LinearLayout>
-
 
         <android.support.design.widget.NavigationView
             android:layout_width="wrap_content"
