--- a/app/src/main/res/layout/activity_burns.xml
+++ b/app/src/main/res/layout/activity_burns.xml
@@ -14,6 +14,13 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
+        <ScrollView
+            android:background="@color/colorBackground"
+            android:scrollbars = "vertical"
+            android:scrollbarStyle="insideOverlay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -22,16 +29,16 @@
             <GridLayout
                 android:columnCount="1"
                 android:columnOrderPreserved="false"
-                android:rowCount="5"
+                android:rowCount="3"
                 android:alignmentMode="alignMargins"
-                android:layout_weight="7"
+                android:layout_weight="12"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:padding="12dp">
 
                 <!-- Row 1 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="260dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -51,7 +58,7 @@
                         android:layout_height="wrap_content">
 
                         <TextView
-                            android:text="1st Degree\n\n  • Soaking the wound in cool water for five minutes or longer\n • Applying cream to soothe the skin \n • Using an antibiotic ointment and loose gauze to protect the affected area"
+                            android:text="1st Degree\n  • Soaking the wound in cool water for five minutes or longer\n • Applying cream to soothe the skin \n • Using an antibiotic ointment and loose gauze to protect the affected area"
                             android:textAlignment="center"
                             android:textColor="@color/colorPrimaryDark"
                             android:textSize="18sp"
@@ -67,7 +74,7 @@
 
                 <!-- Row 2 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="220dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -86,7 +93,7 @@
                         android:layout_height="wrap_content">
 
                         <TextView
-                            android:text="2nd Degree\n\n • Running the skin under cool water for 15 minutes or longer\n • Taking over-the-counter pain medication\n • Applying antibiotic cream to blisters"
+                            android:text="2nd Degree\n • Running the skin under cool water for 15 minutes or longer\n • Taking over-the-counter pain medication\n • Applying antibiotic cream to blisters"
                             android:textAlignment="center"
                             android:textColor="@color/colorPrimaryDark"
                             android:textSize="18sp"
@@ -101,10 +108,10 @@
 
                 <!-- Row 3 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="150dp"
                     android:layout_width="0dp"
-                    android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="2"
+                    android:layout_rowWeight="2"
                     android:layout_marginBottom="16dp"
                     android:layout_marginLeft="16dp"
                     android:layout_marginRight="16dp"
@@ -120,7 +127,7 @@
                         android:layout_height="wrap_content">
 
                         <TextView
-                            android:text="3rd Degree\n\n • Never Attempt to treat a Third Degree burn\n • Press Emergency Button Immediately"
+                            android:text="3rd Degree\n • Never Attempt to treat a Third Degree burn\n • Press Emergency Button Immediately"
                             android:textAlignment="center"
                             android:textColor="@color/colorPrimaryDark"
                             android:textSize="18sp"
@@ -136,9 +143,9 @@
             </GridLayout>
 
 
-
-
         </LinearLayout>
+
+    </ScrollView>
 
         <android.support.design.widget.NavigationView
             android:layout_width="wrap_content"
