--- a/app/src/main/res/layout/activity_cut.xml
+++ b/app/src/main/res/layout/activity_cut.xml
@@ -14,6 +14,13 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
+        <ScrollView
+            android:background="@color/colorBackground"
+            android:scrollbars = "vertical"
+            android:scrollbarStyle="insideOverlay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,14 +32,14 @@
                 android:columnOrderPreserved="false"
                 android:rowCount="5"
                 android:alignmentMode="alignMargins"
-                android:layout_weight="7"
+                android:layout_weight="20"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:padding="12dp">
 
                 <!-- Row 1 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="140dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -52,7 +59,7 @@
                         android:layout_height="wrap_content">
 
                         <TextView
-                            android:text="1. Wash your hands with soap or antibacterial cleanser to prevent infection"
+                            android:text="1. Wash your hands with soap or antibacterial cleanser to prevent infection."
                             android:textAlignment="center"
                             android:textColor="@color/colorPrimaryDark"
                             android:textSize="18sp"
@@ -68,7 +75,7 @@
 
                 <!-- Row 2 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="110dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -87,7 +94,7 @@
                         android:layout_height="wrap_content">
 
                         <TextView
-                            android:text="2. Then, wash the cut thoroughly with mild soap and water"
+                            android:text="2. Then, wash the cut thoroughly with mild soap and water."
                             android:textAlignment="center"
                             android:textColor="@color/colorPrimaryDark"
                             android:textSize="18sp"
@@ -102,7 +109,7 @@
 
                 <!-- Row 3 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="90dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -136,7 +143,7 @@
 
                 <!-- Row 4 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="140dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -155,7 +162,7 @@
                         android:layout_height="wrap_content">
 
                         <TextView
-                            android:text="4. Apply antibacterial ointment and a clean bandage that will not stick to the wound"
+                            android:text="4. Apply antibacterial ointment and a clean bandage that will not stick to the wound."
                             android:textAlignment="center"
                             android:textColor="@color/colorPrimaryDark"
                             android:textSize="18sp"
@@ -176,6 +183,8 @@
 
         </LinearLayout>
 
+
+        </ScrollView>
 
         <android.support.design.widget.NavigationView
             android:layout_width="wrap_content"
