--- a/app/src/main/res/layout/activity_flu.xml
+++ b/app/src/main/res/layout/activity_flu.xml
@@ -13,6 +13,13 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
+        <ScrollView
+            android:background="@color/colorBackground"
+            android:scrollbars = "vertical"
+            android:scrollbarStyle="insideOverlay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,14 +31,14 @@
                 android:columnOrderPreserved="false"
                 android:rowCount="5"
                 android:alignmentMode="alignMargins"
-                android:layout_weight="7"
+                android:layout_weight="20"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:padding="12dp">
 
                 <!-- Row 1 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="80dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -67,7 +74,7 @@
 
                 <!-- Row 2 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="80dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -101,7 +108,7 @@
 
                 <!-- Row 3 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="80dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -135,7 +142,7 @@
 
                 <!-- Row 4 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="80dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -169,7 +176,7 @@
 
                 <!-- Row 5 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="45dp"
+                    android:layout_height="80dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -209,6 +216,7 @@
 
         </LinearLayout>
 
+        </ScrollView>
         <android.support.design.widget.NavigationView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
