--- a/app/src/main/res/layout/activity_fractures.xml
+++ b/app/src/main/res/layout/activity_fractures.xml
@@ -14,6 +14,13 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
+        <ScrollView
+            android:background="@color/colorBackground"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            android:scrollbars = "vertical"
+            android:scrollbarStyle="insideOverlay">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -211,6 +218,7 @@
         </LinearLayout>
 
 
+        </ScrollView>
         <android.support.design.widget.NavigationView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
