--- a/app/src/main/res/layout/activity_punctures.xml
+++ b/app/src/main/res/layout/activity_punctures.xml
@@ -14,11 +14,13 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
-        <ScrollView
-            android:background="@color/colorWhite"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
+        <ScrollView
+            android:background="@color/colorBackground"
+            android:scrollbars = "vertical"
+            android:scrollbarStyle="insideOverlay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -30,14 +32,14 @@
                 android:columnOrderPreserved="false"
                 android:rowCount="5"
                 android:alignmentMode="alignMargins"
-                android:layout_weight="7"
+                android:layout_weight="20"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:padding="12dp">
 
                 <!-- Row 1 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="130dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -73,7 +75,7 @@
 
                 <!-- Row 2 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="110dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -107,7 +109,7 @@
 
                 <!-- Row 3 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="190dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -126,7 +128,7 @@
                         android:layout_height="wrap_content">
 
                         <TextView
-                            android:text="3. Look (but do not poke around) for objects inside the wound. If found, don't remove it. Go to your emergency or urgent care center."
+                            android:text="3. Look, but do not poke around, for objects inside the wound. If found, don't remove it. Go to your emergency or urgent care center."
                             android:textAlignment="center"
                             android:textColor="@color/colorPrimaryDark"
                             android:textSize="18sp"
@@ -141,7 +143,7 @@
 
                 <!-- Row 4 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="180dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -175,7 +177,7 @@
 
                 <!-- Row 5 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="45dp"
+                    android:layout_height="130dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -210,6 +212,8 @@
 
             </GridLayout>
             </LinearLayout>
+
+
         </ScrollView>
 
 
