--- a/app/src/main/res/layout/activity_scrapes.xml
+++ b/app/src/main/res/layout/activity_scrapes.xml
@@ -14,6 +14,12 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
+        <ScrollView
+            android:background="@color/colorBackground"
+            android:scrollbars = "vertical"
+            android:scrollbarStyle="insideOverlay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,14 +31,14 @@
                 android:columnOrderPreserved="false"
                 android:rowCount="5"
                 android:alignmentMode="alignMargins"
-                android:layout_weight="7"
+                android:layout_weight="20"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:padding="12dp">
 
                 <!-- Row 1 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="120dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -52,7 +58,7 @@
                         android:layout_height="wrap_content">
 
                         <TextView
-                            android:text="1. Stop bleeding by pressing a clean, soft cloth against the wound for a few minutes"
+                            android:text="1. Stop bleeding by pressing a clean, soft cloth against the wound for a few minutes."
                             android:textAlignment="center"
                             android:textColor="@color/colorPrimaryDark"
                             android:textSize="18sp"
@@ -68,7 +74,7 @@
 
                 <!-- Row 2 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="80dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -102,7 +108,7 @@
 
                 <!-- Row 3 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="140dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -121,7 +127,7 @@
                         android:layout_height="wrap_content">
 
                         <TextView
-                            android:text="3. If you want, put a light layer of an antibiotic ointment around the injury to kill germs"
+                            android:text="3. If you want, put a light layer of an antibiotic ointment around the injury to kill germs."
                             android:textAlignment="center"
                             android:textColor="@color/colorPrimaryDark"
                             android:textSize="18sp"
@@ -136,7 +142,7 @@
 
                 <!-- Row 4 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="120dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -170,7 +176,7 @@
 
                 <!-- Row 5 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="45dp"
+                    android:layout_height="130dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -210,6 +216,7 @@
 
         </LinearLayout>
 
+        </ScrollView>
         <android.support.design.widget.NavigationView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
