--- a/app/src/main/res/layout/activity_splinters.xml
+++ b/app/src/main/res/layout/activity_splinters.xml
@@ -15,6 +15,13 @@
         android:layout_alignParentStart="true">
 
 
+        <ScrollView
+            android:background="@color/colorBackground"
+            android:scrollbars = "vertical"
+            android:scrollbarStyle="insideOverlay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -23,16 +30,16 @@
             <GridLayout
                 android:columnCount="1"
                 android:columnOrderPreserved="false"
-                android:rowCount="5"
+                android:rowCount="4"
                 android:alignmentMode="alignMargins"
-                android:layout_weight="7"
+                android:layout_weight="16"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:padding="12dp">
 
                 <!-- Row 1 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="80dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -68,7 +75,7 @@
 
                 <!-- Row 2 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="80dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -78,7 +85,8 @@
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
-                    <!-- Row 2 -->
+
+
                     <LinearLayout
                         android:layout_gravity="center_horizontal|center_vertical"
                         android:orientation="vertical"
@@ -102,7 +110,7 @@
 
                 <!-- Row 3 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="120dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -121,7 +129,7 @@
                         android:layout_height="wrap_content">
 
                         <TextView
-                            android:text="3. If the small splinters hurt use sticky tape to pull out"
+                            android:text="3. If the small splinters hurt use sticky tape to pull out."
                             android:textAlignment="center"
                             android:textColor="@color/colorPrimaryDark"
                             android:textSize="18sp"
@@ -136,7 +144,7 @@
 
                 <!-- Row 4 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
+                    android:layout_height="80dp"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
@@ -175,6 +183,9 @@
 
 
         </LinearLayout>
+
+
+        </ScrollView>
 
         <android.support.design.widget.NavigationView
             android:layout_width="wrap_content"
